# ChangeLog for sys-auth/policykit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/ChangeLog,v 1.17 2009/07/02 19:40:42 aballier Exp $

  02 Jul 2009; Alexis Ballier <aballier@gentoo.org> policykit-0.9-r1.ebuild:
  keyword ~x86-fbsd, bug #266560

*policykit-0.92 (20 Jun 2009)

  20 Jun 2009; <mrpouet@gentoo.org> +policykit-0.92.ebuild,
  +files/policykit-0.92-as-needed.patch,
  +files/policykit-0.92-zsh-completions.patch:
  Version bump to 0.92, bug #274411

*policykit-0.9-r1 (25 Apr 2009)

  25 Apr 2009; Daniel Gryniewicz <dang@gentoo.org>
  +files/policykit-0.9-dbus-auth.patch, +policykit-0.9-r1.ebuild:
  Fix policykit with new deny default in dbus

  23 Apr 2009; Raúl Porcel <armin76@gentoo.org> policykit-0.9.ebuild:
  Add ~arm/~s390/~sh

  19 Apr 2009; Brent Baude <ranger@gentoo.org> policykit-0.9.ebuild:
  Marking policykit-0.9 ~ppc for bug 266560

  17 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> metadata.xml:
  Take ownership

  19 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org> -policykit-0.6.ebuild:
  Kill old revision.

  15 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Compnerd retired.

  13 Jan 2009; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  gentopia is becoming freedesktop

  14 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org> +files/PolicyKit.conf,
  policykit-0.9.ebuild:
  Add missing file, bug #250856.

*policykit-0.9 (01 Dec 2008)

  01 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/policykit-0.7-completions.patch,
  +files/policykit-0.9-consolekit03.patch,
  +files/policykit-0.9-pam-headers.patch,
  +files/policykit-0.9-pk-debug.patch, +policykit-0.9.ebuild:
  Bump to 0.9. Fix bug #214801.

  25 Jan 2008; Markus Rothe <corsair@gentoo.org> policykit-0.6.ebuild:
  Added ~ppc64; bug #200076

  29 Dec 2007; Raúl Porcel <armin76@gentoo.org> policykit-0.6.ebuild:
  Add ~alpha/~ia64/~sparc wrt #200076
