@@ -11,15 +11,15 @@ AUX policykit-0.92-as-needed.patch 615 RMD160 f08c939448b14e4d1957fedf48919bfd49
 AUX policykit-0.92-zsh-completions.patch 5207 RMD160 a6b906ee5a0cd200a9186e6f93235f721fe0867a SHA1 5bbec09b6221ff9083de9731e654057c7ef7d996 SHA256 ed4c70130eccf39506a89eb1bcd0b4b6a20de305bc7c24ac13f6405e2acdc9c7
 DIST PolicyKit-0.9.tar.gz 1254318 RMD160 197262d1c48e55558dd4bd57d7bbd8734666129c SHA1 ac99c580eff72f6d5df261c155fb047306439f85 SHA256 f40c7c6bec19d7dba2335bddcffd0457494409a0dfce11d888c748dc892e80b7
 DIST polkit-0.92.tar.gz 964084 RMD160 e4461145fafd3f9a10381d69d5788bc47671dd57 SHA1 c234c7cacbe3cf5c909395186f27b099fc42ee7f SHA256 28463b545917775897f78058ca98715f8a27109496a8ec9522d59150c9eda4a3
-EBUILD policykit-0.9-r1.ebuild 3594 RMD160 fcadede2ddb70d50cc9f03b5c5824cd26b3177e0 SHA1 e440abd8c615649acc31fcc40e6f8cac03063091 SHA256 7dfaebd33a6844085dd7bf9b1e704d78e46463b330e4025ca7662f32081719ed
+EBUILD policykit-0.9-r1.ebuild 3598 RMD160 501ef8543b5bb8de6735f5b773870bb9e05547d8 SHA1 7f17d037978fdb30237020627b43289e12ee410a SHA256 df273e01f45941787a78a93ade373e7e832bbb44d54051457d17f31da69be3df
 EBUILD policykit-0.9.ebuild 3491 RMD160 f5c1fcfae2d204b958bad213b12892bd972ca41c SHA1 d22782042175a782bc9b6b6fe917e5b95e0ce349 SHA256 d28644f44b0e3a2363bc3eef4a791e5eeb935691fea8cdfb4cae087cf0a1c978
-EBUILD policykit-0.92.ebuild 3089 RMD160 2a2e15e1db3e37d9a485fb697d004644f8e54556 SHA1 8236976fb58a723473389afae2c68a51f85339fb SHA256 fd9f4abef461eddc913268218b279f7fafbd3b8e0ded78a82c82df76d9607860
-MISC ChangeLog 2236 RMD160 e8d1975a092905577bb39d90dac8d7284d98938a SHA1 a9d686fc355d81404d67653ea00054636de8aa1a SHA256 5dfd927b7ef7757af7b88b8c2f5f6a77e0ddd3bdda6eb50b9a585cf42773123e
+EBUILD policykit-0.92.ebuild 3094 RMD160 460e5fa9560494ad7d61728117aeef696b38d9ba SHA1 251b93c1f34b98c1d56a8aa3e1421adfc733e857 SHA256 18a44f8548a2b3503f92447a2e50ac5b4736deb222f29ce1fbf34523b83fc8c0
+MISC ChangeLog 2356 RMD160 65ccb95ee2a0aa706bb3ef491993e2a39937c409 SHA1 63b508f0ca130fd532f1675cb29d2b4f9c6d96c0 SHA256 03cf8582b8c2c0215c194dbec4875694c6ef387edc1e180ff361f6e0af52869d
 MISC metadata.xml 345 RMD160 964f2ecce4f5b76361034927bfb5ecec8d104a78 SHA1 43d69ab7fb280a06227d6d6d1f0da672a309f3c5 SHA256 5612bf212dfa718b7f8723c27be56812dcdffe8b8fc32ee0ce1d48c9c7cc57b6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.12 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpNDVUACgkQvFcC4BYPU0rLEACgmCeJbAwFS3Vwj2eff7I7nvkB
-KX4An0UWa6wvlcta+1WmS6A0jYCzqRKK
-=Fyp+
+iEYEARECAAYFAkpR18gACgkQ5BmOA85PVLi6IgCgiQxzySwzIDJUNdAhKFBcqah1
+5QEAn23BcfIBEu8dfRP8Swz7TId+v2Gq
+=KOMA
 -----END PGP SIGNATURE-----
