@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/policykit-0.9-r1.ebuild,v 1.2 2009/07/02 19:40:42 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/policykit-0.9-r1.ebuild,v 1.3 2009/07/06 10:53:44 alexxy Exp $
 
 inherit autotools bash-completion eutils multilib pam
 
@@ -13,7 +13,7 @@ SRC_URI="http://hal.freedesktop.org/releases/${MY_P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE="bash-completion doc pam selinux zsh-completion"
 
 RDEPEND=">=dev-libs/glib-2.6
