@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/policykit-0.92.ebuild,v 1.1 2009/06/20 21:02:55 mrpouet Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/policykit-0.92.ebuild,v 1.2 2009/07/06 10:53:44 alexxy Exp $
 
 EAPI="2"
 
@@ -15,7 +15,7 @@ SRC_URI="http://hal.freedesktop.org/releases/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~mips ~ppc ~x86"
 IUSE="debug doc expat pam zsh-completion nls"
 
 RDEPEND=">=dev-libs/glib-2.14
