@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/policykit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/ChangeLog,v 1.17 2009/07/02 19:40:42 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/policykit/Attic/ChangeLog,v 1.18 2009/07/06 10:53:44 alexxy Exp $
+
+  06 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> policykit-0.9-r1.ebuild,
+  policykit-0.92.ebuild:
+  Add ~mips keyword
 
   02 Jul 2009; Alexis Ballier <aballier@gentoo.org> policykit-0.9-r1.ebuild:
   keyword ~x86-fbsd, bug #266560
